# TKShare

./: .gitignore  Cargo.toml  README.md  meson.build
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  vendor.yml
build-aux/: dist-vendor.sh  io.github.NRTakeda.TKShare.Devel.json  io.github.NRTakeda.TKShare.json
data/: io.github.NRTakeda.TKShare.Api.service.in  io.github.NRTakeda.TKShare.desktop.in.in  io.github.NRTakeda.TKShare.gschema.xml.in  io.github.NRTakeda.TKShare.metainfo.xml.in.in  io.github.NRTakeda.TKShare.releases.xml.in.in  io.github.NRTakeda.TKShare.service.in  meson.build
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: window.blp
docs/: PLANO-wifi-hotspot.md
po/: POTFILES.in
src/: application.rs  constants.rs  dbus.rs  main.rs  meson.build  tray.rs  window.rs
src/widgets/: circular_progress.rs  mod.rs  receive_transfer.rs  recipient_card.rs
